Fix logo two over spill

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,7 +81,7 @@ body {
 
 /* nav logo */
 .header-logo-one {
-    height: 130px;
+    height: 118px;
     width: auto 0;
     position: absolute;
     z-index: 40;
